--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,7 +3,13 @@ a{
   text-decoration:none;
 }
 
-
+// padding to account for fixed nav bar
+.banner-image{
+  padding-top:7%;
+  @media @phone{
+    padding-top:20%;
+  }
+}
 // banner img
 
 .banner-image{
