--- a/less/mixins.less
+++ b/less/mixins.less
@@ -15,10 +15,13 @@
     text-decoration:none;
     color: @nav-font;
     font-weight:bold;
-    padding:1.5%;
+    padding:0%;
     padding-top:1%;
     padding-bottom:.5%;
-}
+    width: 12%;
+    text-align: center;
+    }
+
 
 
 // parametric mixins
