--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,8 +5,11 @@ nav{
     margin:auto;
     flex-wrap:wrap;
     justify-content: center;
-    background-color: @nav-bg;
-    border-bottom: 1rem solid @nav-border;
+    background-color: fade(@nav-bg, 60%);
+    border-bottom: .5rem solid fade(@nav-border,60%);
+    position:fixed;
+    width:100%;
+
         h1{
             .header-text();
             @media @phone{
@@ -19,7 +22,7 @@ nav{
         @media @phone{
             width:20%;
             font-size:1.2rem;
-            padding:3%;
+            padding:2%;
         }
         }
    
